docdir = $(datadir)/doc/@PACKAGE@
doc_DATA = rmp/README rmp/rmp-trace.txt rarp/rfc826.txt rarp/README rarp/rarpd-freebsd.tar.gz rarp/rfc903.txt tftp/rfc2347.txt tftp/README tftp/rfc906.txt tftp/rfc2348.txt tftp/rfc2349.txt tftp/rfc1785.txt tftp/rfc1350.txt tftp/tftpd-freebsd.tar.gz bootparam/bootparamd-freebsd.tar.gz bootparam/README bootparam/bootparam_prot.x dhcp/rfc3011.txt dhcp/rfc3004.txt dhcp/rfc2132.txt dhcp/rfc3203.txt dhcp/README dhcp/rfc2563.txt dhcp/rfc3046.txt dhcp/rfc3118.txt dhcp/rfc2937.txt pxe/README pxe/pxespec.pdf bootp/rfc951.txt bootp/README bootp/rfc1534.txt bootp/bootp-freebsd.tar.gz bootp/rfc1542.txt mop/DECnetIV mop/DECnetIV/dap_v5_6_0.txt mop/DECnetIV/found.txt mop/DECnetIV/route20.txt mop/DECnetIV/nsp401.txt mop/DECnetIV/edatlin10.txt mop/DECnetIV/session10.txt mop/DECnetIV/DECnetPhaseIV_Specification.htm mop/DECnetIV/cterm.txt mop/DECnetIV/netman40.txt mop/DECnetIV/digital-logo.gif mop/DECnetIV/maintop30.txt mop/DECnetIV/ddcmp.txt mop/DECnetIV/eprodar10.txt mop/README
